Updated the 'cardirad' theme to correctly keep the hamburger menu visible in all viewport sizes, but not in admin layouts, removed the header underline effects on smaller viewports due to line wrapping issues

--- a/app/assets/stylesheets/spry_themes/cardirad.scss
+++ b/app/assets/stylesheets/spry_themes/cardirad.scss
@@ -28,8 +28,12 @@ $border-radius-small: 0 !default;
     }
   }
 }
-.offcanvas-toggle { @extend .visible-sm, .visible-md, .visible-lg; }
-.navbar-nav.responsive { @extend .hidden-sm, .hidden-md, .hidden-lg; }
+@media (max-width: 9999px) {
+  body:not(.admin) {
+    .offcanvas-toggle { display: block !important; }
+    .navbar-nav.responsive { display: none !important; }
+  }
+}
 
 /* Jumbotron applies rounded corners on self and buttons */
 .segment-content-wrap.jumbotron {
@@ -65,22 +69,24 @@ $border-radius-small: 0 !default;
 }
 
 /* Underlined headers in text segments */
-.segment-content.text .editable-content {
-  h2, h3 {
-    margin-bottom: 0.5em;
-    padding-bottom: 0.25em;
+@media (min-width: $screen-md-min) {
+  .segment-content.text .editable-content {
+    h2, h3 {
+      margin-bottom: 0.5em;
+      padding-bottom: 0.25em;
 
-    span {
-      position: relative;
+      span {
+        position: relative;
 
-      &:after {
-        content: '';
-        display: block;
-        position: absolute;
-        left: 0;
-        bottom: -0.25em;
-        width: 100%;
-        border-bottom: 2px solid currentColor;
+        &:after {
+          content: '';
+          display: block;
+          position: absolute;
+          left: 0;
+          bottom: -0.25em;
+          width: 100%;
+          border-bottom: 2px solid currentColor;
+        }
       }
     }
   }
